# projects

./: .gitignore
hello/: pyproject.toml
hello/scripts/: say_hello.py
