[tool.poetry]
name = "hello"
version = "0.1.0"
description = ""
authors = ["Максим Шевцов <shevtsov_stv@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
colorama = "^0.4.6"

[tool.poetry.scripts]
say-hello = "scripts.say_hello:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
