[tool.poetry]
name = "hello"
version = "0.1.0"
description = ""
authors = ["Максим Шевцов <shevtsov_stv@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
colorama = "^0.4.6"

[tool.poetry.scripts]
say-hello = "hello.scripts.say_hello:main"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
